tests/sksl/errors/golden/InvalidAssignment.glsl
### Compilation failed:

error: 4: cannot assign to this expression
error: 5: cannot modify immutable variable 'a'
error: 6: cannot modify immutable variable 'b'
3 errors
